# GHActionsApp

./: .dockerignore  Dockerfile  README.md  ci-cdExample.md  main.py  pyproject.toml
.github/workflows/: ci.yml
