[project]
name = "ghactions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.1",
    "pytest>=9.0.2",
]

# Declarar el paquete principal
[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
